--- a/portfolio.css
+++ b/portfolio.css
@@ -7,7 +7,8 @@
 }
 
 h1,
-h2 {
+h2,
+h4 {
   font-family: var(---heading-font);
   color: var(---default-text-color);
 }
@@ -22,8 +23,21 @@ body {
 }
 
 footer .contact-box {
-  border: 3px solid var(---secondary-background);
+  background-color: var(---secondary-background);
   border-radius: 4px;
+  font-family: var(---default-font);
+  color: white;
+  padding: 12px 20px;
+  margin: 100px;
+}
+
+footer .btn-branding {
+  background-color: white;
+  color: var(---default-text-color);
+}
+
+footer :hover.btn-branding {
+  color: var(---alternate-color);
 }
 
 footer .fa-linkedin,
@@ -48,6 +62,11 @@ footer .shecodes-logo {
   border-radius: 50px;
   padding: 10px 8px;
   margin-bottom: 4px;
+}
+
+footer h4 {
+  color: var(---alternate-color);
+  font-size: 30px;
 }
 
 .navbar,
