update css on picture in contact page

--- a/portfolio.css
+++ b/portfolio.css
@@ -145,7 +145,13 @@ footer h4 {
 }
 
 .kelsey {
+  display: block;
+  margin: 0 auto;
   max-width: 30%;
+}
+
+.contents {
+  margin-top: 40px;
 }
 
 .dictionary {
